@@ -3,6 +3,7 @@ package fr.insee.survey.datacollectionmanagement.query.controller;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.nimbusds.oauth2.sdk.util.CollectionUtils;
 import fr.insee.survey.datacollectionmanagement.configuration.auth.user.AuthorityPrivileges;
 import fr.insee.survey.datacollectionmanagement.constants.Constants;
 import fr.insee.survey.datacollectionmanagement.contact.domain.Contact;
@@ -42,6 +43,7 @@ import org.apache.commons.lang3.StringUtils;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.transaction.annotation.Transactional;
@@ -54,7 +56,7 @@ import java.util.*;
 @RestController
 @PreAuthorize(AuthorityPrivileges.HAS_MANAGEMENT_PRIVILEGES)
 @Slf4j
-@Tag(name = "6 - Webclients", description = "Enpoints for webclients")
+@Tag(name = "6 - Webclients", description = "Endpoints for webclients")
 @RequiredArgsConstructor
 @Validated
 public class WebclientController {
@@ -89,7 +91,7 @@ public class WebclientController {
     private final ModelMapper modelMapper;
 
     @Operation(summary = "Create or update questioning for webclients - Returns the questioning and all its accreditations")
-    @PutMapping(value = Constants.API_WEBCLIENT_QUESTIONINGS, produces = "application/json", consumes = "application/json")
+    @PutMapping(value = Constants.API_WEBCLIENT_QUESTIONINGS, produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "201", description = "Created", content = @Content(schema = @Schema(implementation = QuestioningWebclientDto.class))),
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = QuestioningWebclientDto.class))),
@@ -109,16 +111,14 @@ public class WebclientController {
 
         Partitioning part = partitioningService.findById(idPartitioning);
 
+        HttpStatus httpStatus = HttpStatus.OK;
 
         QuestioningWebclientDto questioningReturn = new QuestioningWebclientDto();
-        SurveyUnit su;
-
-        HttpStatus httpStatus = HttpStatus.OK;
-        su = convertToEntity(questioningWebclientDto.getSurveyUnit());
+        SurveyUnit su = convertToEntity(questioningWebclientDto.getSurveyUnit());
         su = surveyUnitService.saveSurveyUnitAndAddress(su);
 
         // Create questioning if not exists
-        Questioning questioning= questioningService.findByIdPartitioningAndSurveyUnitIdSu(idPartitioning, idSu);
+        Questioning questioning = questioningService.findByIdPartitioningAndSurveyUnitIdSu(idPartitioning, idSu);
         if (questioning == null) {
             httpStatus = HttpStatus.CREATED;
             log.info("Create questioning for partitioning={} model={} surveyunit={} ", idPartitioning, modelName,
@@ -215,7 +215,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Get questioning for webclients")
-    @GetMapping(value = Constants.API_WEBCLIENT_QUESTIONINGS, produces = "application/json")
+    @GetMapping(value = Constants.API_WEBCLIENT_QUESTIONINGS, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = QuestioningWebclientDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -246,8 +246,8 @@ public class WebclientController {
 
     }
 
-    @Operation(summary = "Search for a partitiong and metadata by partitioning id")
-    @GetMapping(value = Constants.API_WEBCLIENT_METADATA_ID, produces = "application/json")
+    @Operation(summary = "Search for a partitioning and metadata by partitioning id")
+    @GetMapping(value = Constants.API_WEBCLIENT_METADATA_ID, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = MetadataDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -260,16 +260,15 @@ public class WebclientController {
         metadataDto.setPartitioningDto(convertToDto(part));
         metadataDto.setCampaignDto(convertToDto(part.getCampaign()));
         metadataDto.setSurveyDto(convertToDto(part.getCampaign().getSurvey()));
-        metadataDto.setSourceDto(convertToDto(part.getCampaign().getSurvey().getSource()));
-        metadataDto.setOwnerDto(convertToDto(part.getCampaign().getSurvey().getSource().getOwner()));
-        metadataDto.setSupportDto(convertToDto(part.getCampaign().getSurvey().getSource().getSupport()));
+        final Source source = part.getCampaign().getSurvey().getSource();
+        metadataDto.setSourceDto(convertToDto(source));
+        metadataDto.setOwnerDto(convertToDto(source.getOwner()));
+        metadataDto.setSupportDto(convertToDto(source.getSupport()));
         return ResponseEntity.ok().body(metadataDto);
-
-
     }
 
     @Operation(summary = "Insert or update a partitiong and metadata by partitioning id")
-    @PutMapping(value = Constants.API_WEBCLIENT_METADATA_ID, produces = "application/json", consumes = "application/json")
+    @PutMapping(value = Constants.API_WEBCLIENT_METADATA_ID, produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = MetadataDto.class))),
             @ApiResponse(responseCode = "201", description = "Created", content = @Content(schema = @Schema(implementation = MetadataDto.class))),
@@ -281,8 +280,6 @@ public class WebclientController {
         if (!metadataDto.getPartitioningDto().getId().equalsIgnoreCase(id)) {
             throw new NotMatchException("id and idPartitioning don't match");
         }
-
-        MetadataDto metadataReturn = new MetadataDto();
 
         HttpHeaders responseHeaders = new HttpHeaders();
         responseHeaders.set(HttpHeaders.LOCATION,
@@ -310,6 +307,7 @@ public class WebclientController {
         campaign = campaignService.insertOrUpdateCampaign(campaign);
         partitioning = partitioningService.insertOrUpdatePartitioning(partitioning);
 
+        final MetadataDto metadataReturn = new MetadataDto();
         metadataReturn.setOwnerDto(convertToDto(owner));
         metadataReturn.setSupportDto(convertToDto(support));
         metadataReturn.setSourceDto(convertToDto(source));
@@ -337,7 +335,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Search for main contact")
-    @GetMapping(value = Constants.API_MAIN_CONTACT, produces = "application/json")
+    @GetMapping(value = Constants.API_MAIN_CONTACT, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK"),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -353,13 +351,11 @@ public class WebclientController {
                     .findByIdPartitioningAndSurveyUnitIdSu(partitioningId,
                             surveyUnitId);
             if (questioning != null) {
-                List<QuestioningAccreditation> listQa = questioning.getQuestioningAccreditations().stream()
-                        .filter(qa -> qa.isMain()).toList();
-                if (listQa != null && !listQa.isEmpty()) {
-                    Contact c = contactService.findByIdentifier(listQa.get(0).getIdContact());
+                List<QuestioningAccreditation> questioningAccreditations = questioning.getQuestioningAccreditations().stream()
+                        .filter(QuestioningAccreditation::isMain).toList();
+                if (CollectionUtils.isNotEmpty(questioningAccreditations)) {
+                    Contact c = contactService.findByIdentifier(questioningAccreditations.getFirst().getIdContact());
                     return ResponseEntity.status(HttpStatus.OK).body(convertToDto((c)));
-
-
                 }
             }
             throw new NotFoundException("Contact does not exist");
@@ -370,7 +366,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Get state of the last questioningEvent")
-    @GetMapping(value = Constants.API_WEBCLIENT_STATE, produces = "application/json")
+    @GetMapping(value = Constants.API_WEBCLIENT_STATE, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = StateDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -392,13 +388,13 @@ public class WebclientController {
     }
 
     @Operation(summary = "Indicates whether a questioning should be follow up or not")
-    @GetMapping(value = Constants.API_WEBCLIENT_FOLLOWUP, produces = "application/json")
+    @GetMapping(value = Constants.API_WEBCLIENT_FOLLOWUP, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = EligibleDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Bad request")
     })
-    public ResponseEntity<EligibleDto> isToFollwUp(
+    public ResponseEntity<EligibleDto> isToFollowUp(
             @PathVariable("idPartitioning") String idPartitioning,
             @PathVariable("idSu") String idSu) {
 
@@ -417,14 +413,14 @@ public class WebclientController {
     }
 
     @Operation(summary = "Add a FOLLWUP state to a questioning")
-    @PostMapping(value = Constants.API_WEBCLIENT_FOLLOWUP, produces = "application/json")
+    @PostMapping(value = Constants.API_WEBCLIENT_FOLLOWUP, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = StateDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
             @ApiResponse(responseCode = "400", description = "Bad request")
     })
     @Transactional
-    public ResponseEntity<StateDto> postFollwUp(
+    public ResponseEntity<StateDto> postFollowUp(
             @PathVariable("idPartitioning") String idPartitioning,
             @PathVariable("idSu") String idSu) throws JsonProcessingException {
 
@@ -457,7 +453,7 @@ public class WebclientController {
     }
 
     @Operation(summary = "Indicates whether a questioning should be extract or not (VALINT and PARTIELINT)")
-    @GetMapping(value = Constants.API_WEBCLIENT_EXTRACT, produces = "application/json")
+    @GetMapping(value = Constants.API_WEBCLIENT_EXTRACT, produces = MediaType.APPLICATION_JSON_VALUE)
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200", description = "OK", content = @Content(schema = @Schema(implementation = EligibleDto.class))),
             @ApiResponse(responseCode = "404", description = "Not found"),
@@ -478,6 +474,7 @@ public class WebclientController {
         result.setEligible(questioningEvent.isPresent() ? "true" : "false");
         return ResponseEntity.status(HttpStatus.OK).body(result);
     }
+
     private Support convertToEntity(SupportDto supportDto) {
         return modelMapper.map(supportDto, Support.class);
     }
@@ -532,6 +529,9 @@ public class WebclientController {
     }
 
     private SupportDto convertToDto(Support support) {
+        if (support == null) {
+            return null;
+        }
         return modelMapper.map(support, SupportDto.class);
     }
 
@@ -546,6 +546,9 @@ public class WebclientController {
     }
 
     private OwnerDto convertToDto(Owner owner) {
+        if (owner == null) {
+            return null;
+        }
         return modelMapper.map(owner, OwnerDto.class);
     }
 
